[package]
name = "ingvar"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.207", features = ["derive"] }
serde_json = "1.0.125"
tokio = {version = "1.39.2", features = ["full"]}
tokio-tungstenite = {version = "0.23.1",  features = ["native-tls"]}
futures-util = "0.3"
rand = "0.8.5"
